[sidebar-fixing] Reverted to non-absolute positioning of table, was too much of a hassle to implement

--- a/client/src/modules/Course/Read/Read.module.css
+++ b/client/src/modules/Course/Read/Read.module.css
@@ -3,7 +3,8 @@
 }
 
 .course_data_table {
-    width: 75%;
+    max-height: 25vh;
+    height: 10vh;
 }
 
 /*
